# heat-simulation

./: .gitignore  README.md
cmakes/cuda/: CMakeLists.txt
cmakes/hybrid/: CMakeLists.txt
cmakes/mpi/: CMakeLists.txt
cmakes/omp/: CMakeLists.txt
cmakes/pthread/: CMakeLists.txt
cmakes/sequential/: CMakeLists.txt
include/hdist/: cuda_host.hpp  hdist.hpp  hybrid.hpp  mpi.hpp  omp.hpp  pthread.hpp
src/: cuda.cpp  cuda.cu  hybrid.cpp  main.cpp  mpi.cpp  omp.cpp  pthread.cpp  sequential.cpp
